Freedom Sanbox Ant Deploy/src/objects/Financial_Planners__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This custom setting holds all UserRole ids of users</description>
    <fields>
        <fullName>ComplianceId__c</fullName>
        <label>ComplianceId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Planner_1__c</fullName>
        <label>Financial Planner 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Planner_2__c</fullName>
        <label>Financial Planner 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Planner_3__c</fullName>
        <label>Financial Planner 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechnologyId__c</fullName>
        <label>TechnologyId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Financial Planners</label>
</CustomObject>